 puml 
@startuml
'https://plantuml.com/class-diagram

package XMLSchema {
    class int{}
    class string{}
    class boolean{}
}

package OurGame{
    
    class Jeu{
        plateau : Plateau
        joueur1 : Joueur
        joueur2 : Joueur
        carteDuJeu : ListeDeCartes
    }
    
    class Plateau { 
        colonne : TabInvocation[]
    }
    
    class TabInvocation {
        ligne :  Invocation[]
    }
    
    
    class Joueur {
        pseudo : string
        winStreak : int
        jauge : int
        main : ListeIdCarte
        deck : ListeIdCarte
    }
    
    class ListeDeCartes {
        carte : Carte[]
    }
    
    class Carte {
        {attribut} id : IdCarte
        vie : int
        degat : int
        nom : string
        image : string 
        cout : int
        type : TypeDeCarte
        invocation : Invocation
        rarete : TypeRarete
        
    }
    
    class IdCarte <<enum>> {
        sorcier 
        ...
        ...
    }
    
    class ListeIdCarte  {
        listeId : IdCarte[] 
    }
    
    
    class TypeDeCarte <<enum>> {
        combattant
        sort
        objet
    }
    
    class TypeRarete <<enum>> {
        commune
        rare
        épique
        légendaire
    }
    
    class Invocation {
        vie : int
        degat : int
        pseudoInvocateur : string
        peutJouer : boolean
        peutAttaquer : boolean
    }
    
    
    Jeu *-- Plateau
    Jeu "1"*--"2" Joueur
    Jeu *-- ListeDeCartes
    TabInvocation "1"*--"*" Invocation
    Joueur "1"*--"2" ListeIdCarte
    ListeDeCartes "1"*--"*" Carte
    Carte *-- TypeDeCarte
    Carte *-- Invocation
    Carte *-- TypeRarete
    Carte *-- IdCarte
    ListeIdCarte "1" *-- "*" IdCarte
    Plateau "1"*--"*" TabInvocation 
    
    
    note bottom of IdCarte : à redefinr avec les vrais nom de chaque carte
}
@enduml